Change 'flex: (1)' to 'flex: (1 0 0)' for the nav_search class to fix a layout problem on IE 11

--- a/src/css/layout/navigation.scss
+++ b/src/css/layout/navigation.scss
@@ -227,7 +227,7 @@
   padding-left: 16px;
   padding-right: 16px;
   max-width: 320px;
-  @include flex(1);
+  @include flex(1 0 0);
   .search {
     width: 100%;
     margin-bottom: 0;
